# history

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release-pre-build.sh  release.yml  test.yml  update-flake.yml
src/: _vendor_ctty.rs  lib.rs  main.rs  monitor.rs  schema.rs  tcp.rs  udp.rs  util.rs
src/cli/: eval.rs  isearch.rs  mod.rs  query.rs  server.rs
