[package]
edition = "2021"
name = "history"
version = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
overflow-checks = true


[dependencies]
unicode-width = "0.1.10"
unicode-segmentation = "1.10.0"
anyhow = { version = "1.0.66", features = ["backtrace"] }
bincode = "1.3.3"
chrono = "0.4.22"
chronoutil = "0.2.3"
chrono-english = "0.1.7"
glob = "0.3.0"
crossterm = "0.23.2"
daemonize = "0.4.1"
futures-util = "0.3.25"
git-version = "0.3.5"
gethostname = "0.2.3"
lazy_static = "1.4.0"
libc = "0.2.135"
nix = "0.24.2"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.147", features = ["derive"] }
# structopt = "0.3.26"
clap = { version = "3.2.22", features = ["derive"] }
stybulate = "1.1.2"
sysinfo = { version = "0.24.7", default-features = false, features = [] }
tarpc = { version = "0.29.0", features = ["tcp", "serde-transport-bincode", "serde-transport"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
