[package]
edition = "2021"
name = "history"
version = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
overflow-checks = true


[dependencies]
unicode-width = "0.1.10"
unicode-segmentation = "1.10.1"
anyhow = { version = "1.0.71", features = ["backtrace"] }
bincode = "1.3.3"
chrono = "0.4.26"
chronoutil = "0.2.4"
chrono-english = "0.1.7"
glob = "0.3.1"
crossterm = "0.23.2"
daemonize = "0.4.1"
futures-util = "0.3.28"
git-version = "0.3.5"
gethostname = "0.2.3"
lazy_static = "1.4.0"
libc = "0.2.144"
nix = "0.24.3"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
# structopt = "0.3.26"
clap = { version = "3.2.25", features = ["derive"] }
stybulate = "1.1.2"
sysinfo = { version = "0.24.7", default-features = false, features = [] }
tarpc = { version = "0.29.0", features = ["tcp", "serde-transport-bincode", "serde-transport"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
